# eudaq-drs4

./: .bash_eudaq  .gitignore  CMakeLists.txt  logs
cmake/: FindDRS.cmake  FindPXAR.cmake  FindROOT.cmake  Platform.cmake
conf/: CAEN_201610_110k.conf  CAENtesting.conf  CERN.conf  DRS4_201608.conf  DRS4_201608_1000k.conf  DRS4_201608_110k.conf  DRS4_201608_14k.conf  DRS4_201608_2500k.conf  DRS4_201608_400k.conf  DRS4_201608_50k.conf  DRS4_201610.conf  DRS4_201610_1000k.conf  DRS4_201610_110k.conf  DRS4_201610_14k.conf  DRS4_201610_150k.conf  DRS4_201610_15k.conf  DRS4_201610_2500k.conf  DRS4_201610_400k.conf  DRS4_201610_500k.conf  DRS4_201610_50k.conf  DRS4_201610_70k.conf  Lab.conf  PSI_201608.conf  Pixel_201608_50k.conf  Pixel_201610_1400k.conf  Pixel_201610_1450k.conf  Pixel_201610_150k.conf  Pixel_201610_15k.conf  Pixel_201610_200k.conf  Pixel_201610_3100k.conf  Pixel_201610_500k.conf  Pixel_201610_520k.conf  Pixel_201610_6k.conf  Pixel_201610_70k.conf  PulserTest.conf  caen_converter.conf  chconf.py  converter.ini  converter_waveform_integrals.conf  default.ini  (+25 more)
producers/drs4/: CMakeLists.txt
producers/drs4/src/: DRS4Producer.cxx
scripts/: Converter.py  DoTracking.py  KILLRUN  KILLRUN.py  OnlineMon.py  README.md  STARTRUN  STARTRUN.caen  STARTRUN.cern.pixel  STARTRUN.cern.py  STARTRUN.pad  STARTRUN.pixel  STARTRUN.pixel.sh  STARTRUN.pixel.wbc  STARTRUN.psi.pad.sh  STARTRUN.psi.py  STARTRUN.psi.shadow.sh  STARTRUN.psi.wbc.sh  STARTRUN.py  STARTRUN.scintillator  STARTRUN.scintillator.sh  STARTRUN.shadow.sh  STARTRUN.wbc  STARTRUN.wbc.sh  dirs.default  iclix.py  (+3 more)
(+251 files in other folders)
